@@ -32,6 +32,7 @@ has starting_version => (
         $version;
     },
     coerce => 1,
+    predicate => '_has_starting_version',
     lazy => 1,
     default => sub {
         my $self = shift;
@@ -99,7 +100,8 @@ around dump_config => sub
 
     $config->{+__PACKAGE__} = {
         ( map { $_ => [ $self->$_ ] } qw(phases skips)),
-        ( map { $_ => $self->$_ } qw(deprecated_ok check_dual_life_versions starting_version)),
+        ( map { $_ => $self->$_ } qw(deprecated_ok check_dual_life_versions)),
+        ( starting_version => ($self->_has_starting_version ? $self->starting_version : 'to be determined from perl prereq')),
     };
 
     return $config;
