@@ -1,10 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix fatal error when [MetaConfig] is used and starting_version is
+            not specified (from 0.015)
 
 0.015     2014-08-01 01:01:20Z
-          - fix fatal error in this plugin when used in conjunction with
-            [MetaConfig] (introduced in 0.014)
+          - fix fatal error when used in conjunction with [MetaConfig]
+            (introduced in 0.014)
 
 0.014     2014-07-20 15:35:18Z
           - 'starting_version' now defaults to the perl prerequisite declared
